# Sem_4_Task_1

./: Autotest.h  CIntN.cpp  CIntN.h  CIntN0.cpp  CIntN0.h  CIntN1.cpp  CIntN1.h  CMakeLists.txt  Create.cpp  Create.h  Input.txt  factory.cpp  factory.h  main.cpp
